--- a/index.html
+++ b/index.html
@@ -160,5 +160,6 @@
     <div id="global-bg-overlay"></div>
     <div id="global-bg-noise"></div>
     <div id="root"></div>
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
